--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
     "react-intl": "^6.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
@@ -52,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-date-range": "^1.4.4"
   }
 }
