Added language conversion for search form

--- a/package.json
+++ b/package.json
@@ -46,6 +46,14 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!@shotgunjed)/"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -59,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.12",
     "@types/react-date-range": "^1.4.4"
   }
 }
