--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,4 @@ REACT_APP_CURRENCY_CONVERTOR_API="https://api.exchangerate-api.com/v4/latest/USD
 REACT_APP_HEALTH_API="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/health"
 REACT_APP_SENTRY_DSN="https://816af585480f42f39bf7c4ec56487c3e@o4504796898787328.ingest.sentry.io/4504830638424064"
 REACT_APP_NIGHTLY_RATES="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/getAllRoomRates"
+REACT_APP_ROOM_DATA="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-search-results"
