--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.4.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.0",
@@ -18,6 +19,8 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "amazon-cognito-identity-js": "^6.2.0",
+    "aws-amplify": "^5.0.22",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
