--- a/.env.dev
+++ b/.env.dev
@@ -5,3 +5,5 @@ REACT_APP_SENTRY_DSN="https://816af585480f42f39bf7c4ec56487c3e@o4504796898787328
 REACT_APP_NIGHTLY_RATES="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/getAllRoomRates"
 REACT_APP_ROOM_DATA="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-search-results"
 REACT_APP_ROOM_CONFIG="https://team2-configuration.s3.ap-south-1.amazonaws.com/hotel-1/RoomResultsPage/SearchResultsPage.txt"
+REACT_APP_PROMOTIONS_API="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-promotions"
+REACT_APP_CUSTOM_PROMOTIONS_API="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-custom-promotions"
