--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.11",
     "amazon-cognito-identity-js": "^6.2.0",
     "aws-amplify": "^5.0.22",
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
