--- a/.env.dev
+++ b/.env.dev
@@ -7,3 +7,4 @@ REACT_APP_ROOM_DATA="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/
 REACT_APP_ROOM_CONFIG="https://team2-configuration.s3.ap-south-1.amazonaws.com/hotel-1/RoomResultsPage/SearchResultsPage.txt"
 REACT_APP_PROMOTIONS_API="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-promotions"
 REACT_APP_CUSTOM_PROMOTIONS_API="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-custom-promotions"
+REACT_APP_ALL_PRICE_API="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-nightly-rates"
