Checkout Page Design

--- a/.env.dev
+++ b/.env.dev
@@ -10,3 +10,4 @@ REACT_APP_CUSTOM_PROMOTIONS_API="https://9ssisl6834.execute-api.ap-south-1.amazo
 REACT_APP_ALL_PRICE_API="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-nightly-rates"
 REACT_APP_SEND_EMAIL="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/sendMail"
 REACT_APP_SEND_FEEDBACK="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/give-rating"
+REACT_APP_CHECKOUT_CONFIG="https://team2-configuration.s3.ap-south-1.amazonaws.com/hotel-1/CheckoutConfig.txt"
