--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
