Added booking confirmation page

--- a/.env.dev
+++ b/.env.dev
@@ -11,3 +11,10 @@ REACT_APP_ALL_PRICE_API="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com
 REACT_APP_SEND_EMAIL="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/sendMail"
 REACT_APP_SEND_FEEDBACK="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/give-rating"
 REACT_APP_CHECKOUT_CONFIG="https://team2-configuration.s3.ap-south-1.amazonaws.com/hotel-1/CheckoutConfig.txt"
+REACT_APP_CHECKOUT_FORM="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/book-room"
+REACT_APP_SECRET_KEY="t7Ea5@5^zZ*jCt&cGzLJ#d*R"
+REACT_APP_BOOKING_CONFIRMATION="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/booking-confirmation"
+REACT_APP_BOOKING_STATUS="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/check-booking-status"
+REACT_APP_GENERATE_OTP="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/generate-otp"
+REACT_APP_VERIFY_OTP="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/verify-otp"
+REACT_APP_CANCEL_BOOKING="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/cancel-booking"
