Added My booking and GA

--- a/.env.dev
+++ b/.env.dev
@@ -18,3 +18,6 @@ REACT_APP_BOOKING_STATUS="https://9ssisl6834.execute-api.ap-south-1.amazonaws.co
 REACT_APP_GENERATE_OTP="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/generate-otp"
 REACT_APP_VERIFY_OTP="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/verify-otp"
 REACT_APP_CANCEL_BOOKING="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/cancel-booking"
+REACT_APP_GET_MY_BOOKING="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-my-bookings"
+REACT_APP_GET_ROLE="https://9ssisl6834.execute-api.ap-south-1.amazonaws.com/v1/get-role"
+REACT_APP_UPDATE_CONFIG="https://ua9cc168uj.execute-api.ap-south-1.amazonaws.com/default/Team2-config"
