--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-country-region-selector": "^3.6.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-hook-form": "^7.43.8",
     "react-intl": "^6.3.0",
     "react-material-ui-carousel": "^3.4.2",
